# SysMate

./: .gitignore  Cargo.toml  README.md  build.sh  dev.sh
core/: Cargo.toml
core/src/: app.rs  main.rs  module_loader.rs  system_info.rs
core/src/ui/: disk_analyzer_view.rs  main_window.rs  mod.rs  package_manager_view.rs  service_manager_view.rs  sidebar.rs  startup_manager_view.rs  system_cleaner_view.rs  system_view.rs  task_manager_view.rs
modules/disk_analyzer/: Cargo.toml
modules/disk_analyzer/src/: lib.rs
modules/package_manager/: Cargo.toml
modules/package_manager/src/: lib.rs
modules/service_manager/: Cargo.toml
modules/service_manager/src/: lib.rs
modules/startup_manager/: Cargo.toml
modules/startup_manager/src/: lib.rs
modules/system_cleaner/: Cargo.toml
modules/system_cleaner/src/: lib.rs
